keywords modified and added, fix words

--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "prettier": "^1.18.2"
   },
   "keywords": [
-    "jhon achata",
+    "jhon achata limachi",
     "dcyar",
-    "blog"
+    "blog",
+    "fullstack"
   ],
   "license": "MIT",
   "scripts": {
